# fullstack-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE_CONTEXT.md  LICENSE  Makefile  Makefile.docker  README.md  docker-compose.yml
.github/workflows/: deploy.yml  test.yml
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  test.db
api/alembic/: env.py
api/app/: __init__.py  main.py
api/app/auth/: dependencies.py  security.py
api/app/core/: config.py
api/app/models/: __init__.py  enums.py  item.py  user.py
api/app/repositories/: __init__.py  item.py  user.py
api/app/routers/: auth.py  health.py  items.py
api/app/schemas/: __init__.py  item.py  user.py
api/app/services/: __init__.py  auth.py  item.py  oauth.py
api/tests/: conftest.py
api/tests/test_repositories/: test_user_repository.py
api/tests/test_routers/: test_auth.py  test_health.py  test_items.py
api/tests/test_services/: test_auth_service.py
client/: .gitignore  .prettierrc  Dockerfile  package-lock.json  package.json  tsconfig.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/auth/login/: page.tsx
client/app/auth/register/: page.tsx
client/app/items/: page.tsx
client/lib/: api.ts  auth-store.ts
scripts/: customize.sh
